--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -685,6 +685,81 @@ header {
     }
 }
 
+@media (max-width: 1312px) {
+
+    .head-txt h2 {
+        font-size: 3rem;
+    }
+
+    .top-X {
+        font-size: 16rem;
+    }
+
+    .fantasy-head img {
+        height: 7rem;
+    }
+
+    .head-img {
+        margin-left: -7rem;
+    }
+
+    .arrow {
+        font-size: 2.7rem;
+    }
+
+    .wheel h1 {
+        font-size: 7rem;
+        margin-top: -10rem;
+    }
+
+    .bts h2 {
+        font-size: 3.1rem;
+        margin-left: -3rem;
+        margin-top: 1.9rem;
+    }
+
+    .bts p {
+        font-size: 1.25rem;
+        width: 60vw;
+        margin-left: -4rem;
+    }
+
+    .wheel img {
+        width: 19rem;
+    }
+
+    .right-cont p {
+        width: 60vw;
+    }
+
+    .pics {
+        margin-top: 18vh;
+    }
+
+    .pics h1 {
+        font-size: 1.5rem;
+    }
+
+    .img1 {
+        margin-top: -.2rem;
+        margin-left: 3.5rem;
+    }
+
+    .rect1,
+    .rect2,
+    .rect3,
+    .rect4,
+    .rect5 {
+        height: 9rem;
+    }
+
+    .rect3 {
+        margin-top: -2rem;
+    }
+
+    
+}
+
 /* 
 @media (max-width: 1810px) {
     .wheel {
