--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -42,12 +42,12 @@
     padding: 0 30px;
   }
 
-  header>#logo {
+  header > #logo {
     height: 24px;
   }
 
   .li-underln {
-    padding-top: .6rem;
+    padding-top: 0.6rem;
     display: flex;
     gap: 1rem;
     justify-content: space-around;
@@ -331,11 +331,11 @@
     z-index: 10;
   }
 
-  .gm-content-card>h4 {
+  .gm-content-card > h4 {
     font-size: 36px;
   }
 
-  .gm-content-card>h4::after {
+  .gm-content-card > h4::after {
     content: "";
     height: 8px;
     width: 70px;
@@ -345,14 +345,14 @@
     margin-top: 10px;
   }
 
-  .gm-content-card>p {
+  .gm-content-card > p {
     font-size: 18px;
     color: #989494;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
   }
 
-  .gm-content-card>h6 {
+  .gm-content-card > h6 {
     font-family: "Poppins", sans-serif;
     font-style: italic;
     font-size: 32px;
@@ -432,7 +432,7 @@
     gap: 60px;
   }
 
-  #final-content-wrapper>p {
+  #final-content-wrapper > p {
     font-size: 18px;
   }
 
@@ -783,22 +783,104 @@
   #category-dropmenu {
     display: none;
   }
-  .navbar-polygon{
+  .navbar-polygon {
     margin-bottom: unset !important;
-    margin-top:-3.5rem;
+    margin-top: -3.5rem;
     position: absolute;
-    left:-32%;
+    left: -32%;
   }
-  .navbar-active{
+  .navbar-active {
     display: flex;
     align-items: center;
     position: relative;
+  }
+  /* changes done */
+  .phone-s-download {
+    display: block;
+    height: 500px;
+    max-width: 100%;
+    /* border: 2px solid red; */
+    overflow: hidden;
+    position: relative;
+  }
+  .phone-img-mobile {
+    width: 185px;
+    height: 375px;
+    position: absolute;
+    top: 8%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index:20;
+  }
+  .phone-s-x-section {
+    position: relative;
+    top: 0%;
+  }
+  .phone-s-x-section > p {
+    color: #191818;
+    text-align: center;
+    font-family: formula-bold;
+    font-size: 32px;
+    transform: scaleX(1.9);
+    font-weight: 500;
+    padding-bottom: 16px;
+  }
+  .phone-strip-mobile {
+    position: absolute;
+    top:68%;
+    left:-18%;
+    height: 81.99px;
+    width: 548.98px;
+    /* border: 2px solid green; */
+    background-color: #0d4ebc;
+    transform: rotate(-10deg);
+    z-index: 10;
+
+  }
+  .phone-strip-mobile-2{
+    top:71%;
+    left:-18%;
+    position: absolute;
+    height: 81.99px;
+    width: 548.98px;
+    /* border: 2px solid green; */
+    background-color: #0d4ebc;
+    transform: rotate(12.5deg);
+    z-index: 1;
+    
+  }
+  .phone-small-strip-mobile {
+    height: 9.127px;
+    margin-left:55px;
+    width: 100%;
+    background-color: #216ae7;
+  }
+  .phone-small-strip-mobile > p {
+    color: #0d4ebc;
+    font-family: formula-bold;
+    font-size: 6.615px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    transform: scaleX(2.2);
+  }
+  .phone-middle-strip {
+    height: 63.736px;
+  }
+  .phone-middle-strip > p {
+    color: #fff;
+    font-family: formula-bold;
+    font-size: 22.679px;
+    font-weight: 500;
+    text-align: center;
+    padding:17px 0;
+    transform: scaleX(2.2);
   }
 }
 
 @media (max-width: 508px) {
   .li-underln {
-    padding-top: .4rem;
+    padding-top: 0.4rem;
   }
 
   .line {
@@ -814,7 +896,7 @@
   }
 }
 
-@media(max-width: 470px) {
+@media (max-width: 470px) {
   .l-div {
     margin-left: -2.5rem;
   }
@@ -885,11 +967,11 @@
   }
 
   .l-div {
-    margin-left: -.7rem;
+    margin-left: -0.7rem;
   }
 
   .r-div {
-    margin-right: -.7rem;
+    margin-right: -0.7rem;
   }
 }
 
@@ -968,7 +1050,7 @@
     width: 30px;
   }
 
-  #footer-subcard-logo>img {
+  #footer-subcard-logo > img {
     height: 20px;
   }
 }
@@ -987,9 +1069,7 @@
 }
 
 @media (max-width: 360px) {
-
-
-  #footer-subcard-logo>img {
+  #footer-subcard-logo > img {
     height: 20px;
   }
 
@@ -1010,7 +1090,7 @@
     width: 25px;
   }
 
-  #footer-subcard-logo>img {
+  #footer-subcard-logo > img {
     height: 20px;
   }
 
@@ -1022,5 +1102,162 @@
   .foot-links {
     margin-left: 1rem;
     margin-top: -0.9rem;
+  }
+}
+
+
+@media (min-width:410px) and (max-width:450px) {
+  .phone-s-x-section > p {
+    transform: scaleX(2.1);
+  }
+  .phone-strip-mobile {
+    top:69%;
+    left:-15%;
+    width: 629.98px;
+
+  }
+  .phone-strip-mobile-2{
+    top:72%;
+    left:-15%;
+    width: 629.98px; 
+  }
+  .phone-small-strip-mobile > p {
+    font-size: 7.615px;
+  }
+  .phone-middle-strip > p {
+    transform: scaleX(3);
+  }
+}
+@media (min-width:450px) and (max-width:500px) {
+  .phone-s-x-section > p {
+    transform: scaleX(2.1);
+  }
+  .phone-strip-mobile {
+    top:69%;
+    left:-15%;
+    width: 629.98px;
+
+  }
+  .phone-strip-mobile-2{
+    top:69%;
+    left:-15%;
+    width: 629.98px; 
+  }
+  .phone-small-strip-mobile > p {
+    font-size: 7.615px;
+  }
+  .phone-middle-strip > p {
+    transform: scaleX(3);
+  }
+}
+@media (min-width:500px) and (max-width:550px) {
+  .phone-s-x-section > p {
+    transform: scaleX(2.4);
+  }
+  .phone-strip-mobile {
+    top:74%;
+    left:-20%;
+    width: 729.98px;
+
+  }
+  .phone-strip-mobile-2{
+    top:76%;
+    left:-12%;
+    width: 729.98px; 
+    transform: rotate(12deg);
+  }
+  .phone-small-strip-mobile > p {
+    font-size: 8.615px;
+  }
+  .phone-middle-strip > p {
+    transform: scaleX(3);
+  }
+}
+@media (min-width:550px) and (max-width:640px) {
+  .phone-s-download{
+    height: 550px;
+  }
+  .phone-s-x-section > p {
+    transform: scaleX(2.65);
+  }
+  .phone-strip-mobile {
+    top:72%;
+    left:-20%;
+    width: 829.98px;
+
+  }
+  .phone-strip-mobile-2{
+    top:72%;
+    left:-20%;
+    width: 829.98px; 
+  }
+  .phone-small-strip-mobile > p {
+    font-size: 8.615px;
+    text-align: center;
+  }
+  .phone-middle-strip > p {
+    transform: scaleX(4);
+  }
+}
+@media (min-width:640px) and (max-width:720px) {
+  .phone-s-download{
+    height: 580px;
+  }
+  .phone-s-x-section > p {
+    transform: scaleX(2.9);
+  }
+  .phone-strip-mobile {
+    top:65%;
+    left:-25%;
+    width: 1029.98px;
+
+  }
+  .phone-strip-mobile-2{
+    top:65%;
+    left:-25%;
+    width: 1029.98px; 
+    transform: rotate(13deg);
+  }
+  .phone-small-strip-mobile > p {
+    font-size: 7.615px;
+    text-align: center;
+  }
+  .phone-middle-strip > p {
+    transform: scaleX(4);
+  }
+}
+@media (min-width:720px) and (max-width:780px) {
+  .phone-s-download{
+    height: 620px;
+  }
+  .phone-s-x-section > p {
+    transform: scaleX(3.4);
+  }
+  .phone-strip-mobile {
+    top:61%;
+    left:-30%;
+    width: 1229.98px;
+
+  }
+  .phone-strip-mobile-2{
+    top:65%;
+    left:-30%;
+    width: 1229.98px; 
+  }
+  .phone-small-strip-mobile > p {
+    font-size: 8.615px;
+    text-align: center;
+  }
+  .phone-middle-strip > p {
+    transform: scaleX(4.5);
+  }
+}
+@media (min-width:300px) and (max-width:359px){
+  .phone-strip-mobile{
+    width:488px;
+    top:70%;
+  }
+  .phone-strip-mobile-2{
+    width:450px;
   }
 }
