--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -2,6 +2,10 @@
     color: white;
 }
 
+.pics-m{
+    display: none;
+}
+
 header {
     z-index: 1;
     position: relative;
@@ -1675,4 +1679,292 @@ header {
     .top-X{
         display: none;
     }
+
+    .fantasy-head{
+        margin-top: 2.5rem;
+        margin-left: -10rem;
+    }
+
+    .head-txt h1{
+        font-size: 1.4rem;
+    }
+
+    .head-txt h2{
+        font-size: 2.1rem;
+        margin-left: 1rem;
+    }
+
+    .head-img img{
+        height: 4.6rem;
+    }
+
+    .arrow{
+        font-size: 1.6rem;
+        margin-left: 43vw;
+    }
+
+    .wheel{
+        margin-top: -2rem;
+    }
+
+    .wheel h1{
+        font-size: 6.5rem;
+        margin-top: -8.4rem;
+    }
+
+    .wheel h2{
+        margin-top: -3rem;
+        font-size: 2.2rem;
+    }
+
+    .bts p{
+        margin-top: 6rem;
+        font-size: 16px;
+        text-align: left;
+        margin-left: -2rem;
+        width: 24rem;
+        font-weight: bolder;
+        line-height: 1.3rem;
+    }
+
+    .wheel img{
+        width: 20rem;
+        height: 15rem;
+        margin-left: 30vw;
+    }
+
+    .bg-img img{
+        position: absolute;
+        height: 100rem;
+        width: 42rem;
+        margin-left: 2rem;
+    }
+
+    .content p{
+        position: relative;
+    }
+
+    .left-cont img{
+        position: relative;
+    }
+
+    .top1, .top2, .top3{
+        position: relative;
+    }
+
+    .details{
+        margin-top: 10rem;
+    }
+
+    .left-cont{
+        margin-top: -15rem;
+    }
+
+    .left-cont img{
+        width: 70vw;
+        margin-bottom: -1rem;
+    }
+
+    .top1, .top2, .top3{
+        width: 20vw;
+        margin-bottom: .7rem;
+    }
+
+    .btm1, .btm2, .btm3{
+        width: 40vw;
+    }
+
+    .title h1{
+        margin-left: 10vw;
+        font-size: 6rem;
+    }
+
+    .title p{
+        margin-left: -25rem;
+        font-size: 2.5rem;
+        margin-top: 5rem;
+    }
+
+    .right-cont p{
+        font-size: 1.2rem;
+        width: 70vw;
+        line-height: 1.5rem;
+        margin-left: -29rem;
+    }
+
+    .m-t2 h1{
+        margin-left: 24vw;
+    }
+
+    .m-t2 p{
+        margin-left: -20rem;
+    }
+
+    .m-t3 h1{
+        margin-left: 17vw;
+    }
+
+    .m-t3 p{
+        margin-left: -22.5rem;
+    }
+
+    .poster{
+        margin-top: 10rem;
+    }
+
+    .left-rect, .right-rect, .rect1, .rect6{
+        display: none;
+    }
+
+    .center {
+        margin-top: -10rem;
+        margin-left: -7rem;
+    }
+
+    .center img{
+        height: 28rem;
+        width: 15rem;
+    }
+
+    .pics{
+        display: none;
+    }
+
+    .r-man h1{
+        display: none;
+    }
+
+    .pics-m{
+        display: flex;
+        flex-direction: column;
+        margin-top: -1.5rem;
+    }
+
+    .m-1{
+        margin-left: 24vw;
+        display: flex;
+    }
+
+    .m-1 img{
+        width: 15rem;
+        height: 28rem;
+    }
+
+    .m-1 h1{
+        margin-top: 3rem;
+    }
+
+    .pics-m h1{
+        color: red;
+        font-size: 1.4rem;
+    }
+
+    .m-txt h1{
+        width: 9rem;
+    }
+
+    .pics-m p{
+        margin-left: 10px;
+    }
+
+    .bg-fade{
+        display: none;
+    }
+
+    .pics-m p{
+        font-size: 1rem;
+        font-family: Montserrat;
+    }
+
+    .m-txt p{
+        width: 10rem;
+    }
+
+    .m-2{
+        margin-top: -9rem;
+        width: 100%;
+        margin-left: 2rem;
+    }
+
+    .m-2 h1{
+        width: 5rem;
+        margin-left: 77vw;
+        text-align: right;
+    }
+
+    .m-2 img{
+        height: 17rem;
+        width: 9rem;
+    }
+
+    .m2-txt{
+        display: flex;
+        margin-left: 47.5vw;
+    }
+
+    .m2-txt p{
+        width: 10rem;
+        margin-top: 5rem;
+    }
+
+    .m-3{
+        margin-top: -10.5rem;
+        margin-left: 3rem;
+    }
+
+    .m-3 h1{
+        margin-left: 2rem;
+        margin-bottom: -5px;
+    }
+
+    .m3-txt{
+        display: flex;
+    }
+
+    .m-3 img{
+        width: 14rem;
+        height: 28rem;
+    }
+
+    .m3-txt p{
+        width: 12rem;
+        margin-top: 9rem;
+        margin-left: -5px;
+    }
+
+    .m-4{
+        margin-left: 60vw;
+        margin-top: -12rem;
+    }
+
+    .m-4 p{
+        width: 10rem;
+    }
+
+    .m4-txt{
+        display: flex;
+    }
+
+    .m4-txt h1{
+        transform:rotate(270deg);
+        margin-right: -19rem;
+        
+    }
+
+    .m4-txt img{
+        width: 16rem;
+        height: 28rem;
+    }
+
+
+
+
+    .img1{
+        margin-top: 80rem;
+    }
+
+
+
+    
+
 }
